[package]
name = "ros"
version = "0.1.0"
authors = ["Arran France <arranf@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-ros.json"

[dependencies]
bootloader = "0.3.12"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]